libs/extractor/tests/snapshots/all_tests__extract_selector-16.snap
---
source: libs/extractor/tests/all_tests.rs
expression: "ToBTreeSet::from(extract(\"test.tsx\",\nr#\"import {Box} from '@devup-ui/core'\n        <Box selectors={{\n          \".a, .b\": {\n            _hover: {\n              bg: \"$primary\"\n            },\n            selectors: {\n              \"&:active\": {\n                bg: \"$secondary\"\n              }\n            }\n          }\n        }} />\n        \"#,\nExtractOption\n{\n    package: \"@devup-ui/core\".to_string(), css_dir:\n    \"@devup-ui/core\".to_string(), single_css: true, import_main_css: false,\n    import_aliases: HashMap::new()\n}).unwrap())"
---
ToBTreeSet {
    styles: {
        Static(
            ExtractStaticStyle {
                property: "background",
                value: "$primary",
                level: 0,
                selector: Some(
                    Selector(
                        "& .a:hover",
                    ),
                ),
                style_order: None,
                layer: None,
            },
        ),
        Static(
            ExtractStaticStyle {
                property: "background",
                value: "$primary",
                level: 0,
                selector: Some(
                    Selector(
                        "& .b:hover",
                    ),
                ),
                style_order: None,
                layer: None,
            },
        ),
        Static(
            ExtractStaticStyle {
                property: "background",
                value: "$secondary",
                level: 0,
                selector: Some(
                    Selector(
                        "& .a:active",
                    ),
                ),
                style_order: None,
                layer: None,
            },
        ),
        Static(
            ExtractStaticStyle {
                property: "background",
                value: "$secondary",
                level: 0,
                selector: Some(
                    Selector(
                        "& .b:active",
                    ),
                ),
                style_order: None,
                layer: None,
            },
        ),
    },
    code: "import \"@devup-ui/core/devup-ui.css\";\n<div className=\"a b c d\" />;\n",
}
